add swagger config in media service